--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Babyyoda777: iOS and Jailbreak developer</title>
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
+    <meta name= "viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
