--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                     </svg>
                 </a>
             </li>
-            <li><a href="mailto:babyyoda777@icloud.com"></a><svg xmlns="http://www.w3.org/2000/svg" width="32"
+            <li><a href="mailto:babyyoda777@icloud.com"><svg xmlns="http://www.w3.org/2000/svg" width="32"
                     height="32" viewBox="0 0 32 32">
                     <path fill="evenodd"
                         d="M15.996 15.457l16.004-7.539v-3.918h-32v3.906zM16.004 19.879l-16.004-7.559v15.68h32v-15.656z">
                     </path>
                 </svg>
                 </a></li>
-            <li><a href="https://www.linkedin.com/in/muhammad-shah-b25482248/"></a><svg xmlns="http://www.w3.org/2000/svg"
+            <li><a href="https://www.linkedin.com/in/muhammad-shah-b25482248/"><svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 -4 32 32" width="50">
                     <path
                         d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z">
